kubernetes/apps/flux-system/flux/instance/github/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
    - name: external
      kind: Gateway
      namespace: network
      sectionName: https
  hostnames:
    - flux-webhook.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
